infra/k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamtube-app
spec:
  type: ClusterIP
  selector:
    part-of: streamtube
    component: app
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamtube-app
spec:
  replicas: 1
  selector:
    matchLabels:
      part-of: streamtube
      component: app
  template:
    metadata:
      labels:
        part-of: streamtube
        component: app
    spec:
      containers:
        - name: app
          image: streamtube-app
          imagePullPolicy: Never
          ports:
            - containerPort: 8080

          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '2Gi'
              cpu: '4000m'

          readinessProbe:
            httpGet:
              path: /api/v1/healthcheck/ready
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/v1/healthcheck/live
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
