infra/k8s/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  ports:
    - port: 27017
      name: mongodb
  clusterIP: None
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: 'mongodb'
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:8.2
          ports:
            - containerPort: 27017
          readinessProbe:
            exec:
              command:
                [
                  '/bin/sh',
                  '-c',
                  'mongosh --quiet -u $MONGO_INITDB_ROOT_USERNAME -p $MONGO_INITDB_ROOT_PASSWORD --authenticationDatabase $AUTH_SOURCE --eval ''db.adminCommand("ping").ok''',
                ]
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            exec:
              command:
                [
                  '/bin/sh',
                  '-c',
                  'mongosh --quiet -u $MONGO_INITDB_ROOT_USERNAME -p $MONGO_INITDB_ROOT_PASSWORD --authenticationDatabase $AUTH_SOURCE --eval ''db.adminCommand("ping").ok''',
                ]
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5

          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 1Gi
